--- a/SpringBootKotlin/NoteApp/src/main/resources/application.properties
+++ b/SpringBootKotlin/NoteApp/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=NoteApp
 # postgresql config
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=vansh@1303tomarPL
+spring.datasource.password=[YOUR_PASSWORD]
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # jpa
@@ -11,4 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-server.address=10.202.165.234
+server.address=[YOUR_IP_ADDRESS_FOR_PHYSICAL_DEVICE]
